Refactor, Assessment & StudentProject classes, File storage support